# adjoint

./: configure.ac
src/: Makefile.am
src/adapt/: data_update.C  depchk.C  hadpt.C  refine2.C  unrefine.C  updatenei.C
src/adjoint/: Makefile.am  adjoint_init.C  adjoint_test.C  bilinear_interp.C  calc_adjoint.C  calc_jacobain.C  debug_flux.C  dual_solver.C  error_compute.C  residual.C  uniform_refine.C
src/datstr/: Makefile.am  dualmesh.C  element2.C  hashtab2.C  jacobian.C  node.C
src/geoflow/: Makefile.am  correct.f  corrector.C  drag_model.f  edge_states.C  eigen.f  get_coef_and_eigen.C  getcoef.f  move_data.C  setup_geoflow.C  sgn.f  slopes.C  stats.C  step.C
src/gisapi/: GisApi.C
src/header/: Makefile.am  constant.h  dualmesh.h  element2.h  extfun.h  flux_srcs.h  geoflow.h  hpfem.h  jacobian.h  node.h  properties.h
src/main/: Makefile.am  datread.C  delete_tab.C  hpfem.C  init_piles.C
src/tecplot/: Makefile.am  tecplot.C  xdfm_write.C
