#
# automake template for src/adjoint directory
#
# $Id: Makefile.am 2 2014-05-22 19:26:11Z hossein $
#

noinst_LIBRARIES = libadjoint.a

libadjoint_a_SOURCES = dual_solver.C calc_jacobain.C adjoint_init.C \
                       residual.C calc_adjoint.C uniform_refine.C bilinear_interp.C \
                       error_compute.C debug_flux.C adjoint_test.C





